Implement the upload feat which directly push the code to github

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,7 +39,13 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@remix-run/react": "latest",
+    "@stomp/stompjs": "^7.1.1",
     "@sveltejs/kit": "latest",
+    "@uppy/core": "^5.0.1",
+    "@uppy/drag-drop": "^5.0.1",
+    "@uppy/file-input": "^4.2.2",
+    "@uppy/progress-bar": "^4.3.2",
+    "@uppy/xhr-upload": "^5.0.0",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -59,6 +65,7 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "sockjs-client": "^1.6.1",
     "sonner": "^1.7.4",
     "svelte": "latest",
     "tailwind-merge": "^2.5.5",
